--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
+    "target": "esnext",
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "module": "esnext",
