--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "etl": "node src/scripts/backup-and-migrate-redis.mjs"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
@@ -15,12 +16,17 @@
     "@vercel/kv": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.412.0",
+    "mongodb": "^6.8.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "redis": "^4.7.0",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "vercel": "^35.2.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
